--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -199,7 +199,7 @@
                 .then((data) => {
                     console.log('VKWebAppGetUserInfo: ');
                     const title = document.getElementById('mainTitle');
-                    title.innerHTML = `Hello, ${data.first_name} ${data.second_name} from ${data.city.title}!`;
+                    title.innerHTML = `Дарова, ${data.first_name} ${data.last_name}!`;
                 })
                 .catch((error) => {
                     console.log('Error on VKWebAppGetUserInfo: ' + error.toString());
